--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,10 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+@import 'colors';
+@import 'theme';
+@import 'typography';
+@import 'header';
+@import 'buttons';
+@import 'sections';
+@import 'footer';
