--- a/assets/styles/sections.scss
+++ b/assets/styles/sections.scss
@@ -1,14 +1,5 @@
-@media (max-width: $screen-xs-max) {
-  .post {
-    &-date-input,
-    &-title-input {
-      margin-bottom: $medium-padding;
-    }
-  }
-}
-
-.posts-list {
-  li {
-    border-bottom: 1px solid $gray;
+.intro {
+  > .divider {
+    color: $black;
   }
 }
