--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -1,22 +1,40 @@
-.btn-link {
-  border-bottom: 2px solid $gray;
-  color: $black;
+.btn-custom {
+  background-color: transparent;
+  border-radius: 0;
   outline: none;
-  padding-bottom: 1px;
+  padding: 6px;
 
   &,
-  &:hover,
-  &:focus {
+  &:focus,
+  &:hover {
+    color: $black;
     text-decoration: none;
   }
 
-  &:hover,
-  &:focus {
-    border-bottom: 2px solid $black;
-    color: $black;
+  &.bbt {
+    border: 0;
+    border-bottom: 1px solid $black;
+    padding: 0;
+    padding-bottom: 1px;
+
+    &:focus,
+    &:hover {
+      border-bottom: 1px solid $dark-gray;
+    }
   }
 
-  &.btn-inline {
-    padding: 0;
+  &.bordered {
+    border: 1px solid;
+
+    &:focus,
+    &:hover {
+      border-color: $dark-gray;
+    }
+  }
+}
+
+@media (max-width: $screen-sm-max) {
+  .btn-main {
+    margin: 12px 15px 0;
   }
 }
