--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -1,13 +1,24 @@
 body {
+  color: $black;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
 }
 
-.btn-inline {
+.btn-custom {
   font-size: 100%;
 }
 
 .footer-text {
   font-size: small;
+}
+
+.intro {
+  font-size: 1.5em;
+
+  h2,
+  .h2 {
+    font-size: 2.25em;
+  }
 }
 
 .text-danger,
@@ -18,5 +29,21 @@ body {
   &.password-message {
     font-size: small;
     padding: 8px;
+  }
+}
+
+.text-mono {
+  font-family: 'Roboto Mono', monospace;
+
+  .text-strong {
+    font-weight: 700;
+  }
+}
+
+.text-sans {
+  font-family: 'Roboto', sans-serif;
+
+  &.text-strong {
+    font-weight: 900;
   }
 }
