--- a/assets/styles/sections.scss
+++ b/assets/styles/sections.scss
@@ -1,9 +1,23 @@
 .intro {
+  padding: 2em 1em;
+
   > .divider {
     color: $black;
   }
 
   .page-forms {
     margin-top: 1em;
+  }
+}
+
+@media (min-width: $screen-md-min) {
+  .intro {
+    padding: 2em 4em;
+  }
+}
+
+@media (max-width: $screen-xs-max) {
+  .intro {
+    padding: 2em 1em;
   }
 }
