--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -14,6 +14,12 @@ body {
   font-size: small;
 }
 
+.footer-text {
+  .btn-custom {
+    font-size: inherit;
+  }
+}
+
 .message,
 .error {
   @extend .text-mono;
