--- a/assets/styles/sections.scss
+++ b/assets/styles/sections.scss
@@ -1,23 +1,17 @@
-.intro {
-  padding: 2em 1em;
+.welcome {
+  .intro {
+    padding: 0 2em 2em;
 
-  > .divider {
-    color: $black;
-  }
-
-  .page-forms {
-    margin-top: 1em;
+    > .divider {
+      color: $black;
+    }
   }
 }
 
-@media (min-width: $screen-md-min) {
-  .intro {
-    padding: 2em 4em;
-  }
-}
-
-@media (max-width: $screen-xs-max) {
-  .intro {
-    padding: 2em 1em;
+@media (min-width: $screen-md-max) {
+  .welcome {
+    .intro {
+      padding: 0 4em 2em;
+    }
   }
 }
