Add styling for page form headings in `Welcome` section

--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -28,6 +28,12 @@ body {
   text-align: center;
 }
 
+.page-forms {
+  .h3 {
+    margin-top: 0;
+  }
+}
+
 .text-mono {
   font-family: 'Roboto Mono', monospace;
 
