Add To-Do HTML for CRUD script testing

--- a/assets/scripts/templates/password.handlebars
+++ b/assets/scripts/templates/password.handlebars
@@ -8,6 +8,6 @@
     <input type="password" id="inputPassword5" class="form-control" name="passwords[new]" placeholder="Enter your new password" required>
   </div>
   <div class="form-group">
-    <button type="submit" class="text-lowercase btn btn-default btn-custom" id="passwordButton">Save</button>
+    <button type="submit" class="text-strong btn btn-default btn-custom" id="passwordButton">Save</button>
   </div>
 </form>
