--- a/assets/scripts/templates/sign-up.handlebars
+++ b/assets/scripts/templates/sign-up.handlebars
@@ -12,6 +12,6 @@
     <input type="password" class="form-control" id="inputPassword2" name="credentials[password_confirmation]" placeholder="Confirm your password" required>
   </div>
   <div class="form-group">
-    <button type="submit" class="text-lowercase text-mono text-strong btn btn-default">Sign Up</button>
+    <button type="submit" class="text-strong btn btn-default btn-custom">Sign Up</button>
   </div>
 </form>
