--- a/assets/scripts/templates/sign-in.handlebars
+++ b/assets/scripts/templates/sign-in.handlebars
@@ -8,6 +8,6 @@
     <input type="password" class="form-control" id="inputPassword3" name="credentials[password]" placeholder="Enter your password" required>
   </div>
   <div class="form-group">
-    <button type="submit" class="text-lowercase text-mono text-strong btn btn-default">Sign In</button>
+    <button type="submit" class="text-strong btn btn-default btn-custom">Sign In</button>
   </div>
 </form>
