--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -4,6 +4,14 @@ body {
   font-size: 16px;
 }
 
+.btn-custom {
+  text-transform: lowercase;
+
+  &:not(.btn-main) {
+    @extend .text-mono;
+  }
+}
+
 .btn-main {
   font-size: 1.5em;
   font-weight: 700;
@@ -28,10 +36,8 @@ body {
   text-align: center;
 }
 
-.page-forms {
-  .h3 {
-    margin-top: 0;
-  }
+.h3 {
+  margin-top: 0;
 }
 
 .text-mono {
