Refactor HTML, CSS and JS
This version update has:
- Semantic and cleaner HTML, breaking down the page layout into sections
- IDs for layout element and sections
- UI toggles in JS targeted by element IDs instead of classes

Next steps:
- Handlebars template for To-Do List
- JS for CRUD features
- Refactor HTML and JS for `message` after user actions

--- a/assets/styles/sections.scss
+++ b/assets/styles/sections.scss
@@ -1,17 +1,9 @@
-.welcome {
-  .intro {
-    padding: 0 2em 2em;
-
-    > .divider {
-      color: $black;
-    }
-  }
+.section-padding {
+  padding: 0 2em;
 }
 
 @media (min-width: $screen-md-max) {
-  .welcome {
-    .intro {
-      padding: 0 4em 2em;
-    }
+  .section-padding {
+    padding: 0 4em;
   }
 }
