Update `see-more` styling, now used for the checkbox
Created a class `.form.update-done` to provide padding and border to
each to-do list item's checkbox area.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -48,6 +48,14 @@ a {
   @extend .flat;
 }
 
+.form {
+  &.update-done {
+    border-right: 1px solid;
+    display: inline-block;
+    padding: 10px 15px;
+  }
+}
+
 .modal {
   background: rgba(255, 255, 255, 0.5);
 }
