--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -5,10 +5,12 @@ body {
 }
 
 .btn-custom {
-  text-transform: lowercase;
-
   &:not(.btn-main) {
     @extend .text-mono;
+  }
+
+  &:not(.see-more) {
+    text-transform: lowercase;
   }
 }
 
