--- a/assets/scripts/templates/to-do.handlebars
+++ b/assets/scripts/templates/to-do.handlebars
@@ -1,7 +1,8 @@
-<form class="form update-content" data-id={{todo.id}}>
+<form class="form update update-content">
   <div class="form-group">
-    <input type="hidden" name="todo[done]">
-    <input type="text" class="form-control input-sm" name="todo[content]" placeholder="{{todo.content}}">
+    <input type="hidden" name="todo[id]" class="to-do-id">
+    <input type="hidden" name="todo[done]" class="to-do-done" value={{todo.done}}>
+    <input type="text" class="form-control input-sm to-do-content" name="todo[content]" placeholder="{{todo.content}}">
   </div>
   <div class="form-group text-right">
     <button class="btn btn-default btn-sm btn-custom" type="submit">Update</button>
