--- a/assets/scripts/templates/create.handlebars
+++ b/assets/scripts/templates/create.handlebars
@@ -1,11 +1,9 @@
-<form id="createForm">
-  <div class="input-group">
-    <span class="input-group-addon">
-      <input type="checkbox" name="{{todo.done}}" aria-label="checkbox" disabled>
-    </span>
-    <input type="text" class="form-control" name="{{todo.content}}" aria-label="checkbox">
-    <span class="input-group-btn">
-      <button class="btn btn-default btn-custom" type="submit">Create</button>
-    </span>
+<form class="form create">
+  <div class="form-group">
+    <input type="text" class="form-control input-sm to-do-content"  name="todo[content]">
   </div>
+  <div class="form-group text-right">
+    <button class="btn btn-default btn-sm btn-custom" type="submit">Create</button>
+  </div>
+  <p class="hidden message"></p>
 </form>
