Add checkbox toggle to update to-do list item's `done` status
The checkbox toggle updates and saves the to-do's `done` property to `true` or `false`.

`onCheckboxToggle` runs when a user clicks on a to-do list item's checkbox. Once a checkbox is checked, the to-do's `done` property is set to `true` and its text is strikedthrough. When it is unchecked, its value returns to its default `false` and the text has no decoration.

Data persists after sign out.

--- a/assets/scripts/templates/to-do-list.handlebars
+++ b/assets/scripts/templates/to-do-list.handlebars
@@ -1,12 +1,21 @@
 <ul class="list-unstyled to-do-list" id="todoList">
   {{#each todos as |todo|}}
   <li class="to-do">
-    <form class="form update-done">
+    <form class="form update update-done">
       <input type="hidden" name="todo[content]" value="{{todo.content}}" class="to-do-content">
-      <input type="checkbox" name="todo[done]" aria-label="checkbox" class="to-do-done" data-id={{todo.id}}>
+      {{#if todo.done}}
+      <input type="checkbox" name="todo[done]" aria-label="checkbox" class="to-do-done" value="{{todo.done}}" data-id={{todo.id}} checked>
+      {{else}}
+      <input type="checkbox" name="todo[done]" aria-label="checkbox" class="to-do-done" value="{{todo.done}}" data-id={{todo.id}}>
+      {{/if}}
+      <p class="hidden message"></p>
     </form>
     <a role="button" name="{{todo.content}}" data-id={{todo.id}} data-toggle="modal" data-target="#todoModal" class="btn btn-link btn-custom see-more">
+      {{#if todo.done}}
+      <s>{{todo.content}}</s>
+      {{else}}
       {{todo.content}}
+      {{/if}}
     </a>
     <a role="button" class="close btn btn-link btn-custom delete">
       <span data-id={{todo.id}} aria-hidden="true">&times;</span>
