--- a/assets/styles/colors.scss
+++ b/assets/styles/colors.scss
@@ -1,6 +1,7 @@
 $black: #000;
-$dark-gray: #333;
-$gray: #ddd;
-$near-white: #f4f4f4;
+$gold: #ffb700;
+$mid-gray: #555;
+$near-black: #111;
+$washed-yellow: #fffceb;
 $red: #ff4136;
 $white: #fff;
