--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -1,3 +1,5 @@
+$border-default: 1px solid $near-black;
+
 $main-padding: 30px;
 $medium-padding: 15px;
 
@@ -7,7 +9,7 @@ html {
 }
 
 body {
-  background-color: $near-white;
+  background-color: $washed-yellow;
   margin-bottom: 50px;
 }
 
@@ -21,14 +23,14 @@ a {
 
 .box {
   background-color: $white;
-  border: 1px solid $gray;
+  border: 1px solid $near-black;
   margin: $medium-padding 0;
   padding: 2em;
 }
 
 .message {
   border: 1px dashed;
-  color: $dark-gray;
+  color: $near-black;
   margin: $medium-padding 0;
   padding: 8px 4em;
 
@@ -65,7 +67,9 @@ a {
 }
 
 .to-do-list {
+  background-color: $washed-yellow;
   border: 1px solid;
+  color: $mid-gray;
   margin-bottom: 0;
   margin-top: $medium-padding * 2;
 
