--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -46,6 +46,16 @@ body {
   margin-top: 0;
 }
 
+.learn {
+  font-size: 85%;
+}
+
+.learn-article {
+  .close {
+    font-size: 18px;
+  }
+}
+
 .to-do {
   .close {
     line-height: inherit;
