--- a/assets/styles/buttons.scss
+++ b/assets/styles/buttons.scss
@@ -23,7 +23,7 @@
   }
 
   &.create {
-    background-color: $gold;
+    background-color: $yellow;
   }
 
   &.see-more {
@@ -59,6 +59,34 @@
   padding: 0;
 }
 
+.learn-article {
+  .btn,
+  input[type='checkbox'] {
+    margin-bottom: 15px;
+  }
+
+  .btn {
+    &:active,
+    &:focus,
+    &:hover {
+      background-color: transparent;
+    }
+
+    &.create {
+      &:active,
+      &:focus,
+      &:hover {
+        background-color: $yellow;
+      }
+    }
+  }
+
+  .close {
+    float: none;
+    padding: 6px;
+  }
+}
+
 .navbar-collapse {
   .btn-custom {
     background-color: $white;
@@ -74,6 +102,7 @@
     }
   }
 }
+
 @media (max-width: $screen-sm-max) {
   .btn-main {
     margin: 12px 15px 0;
