Add feedback section for Authentication
The feedback message for Sign In and Sign Up is now shown below the forms, not above.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -28,6 +28,18 @@ a {
   padding: 2em;
 }
 
+.learn {
+  &-article {
+    border-bottom: $border-default;
+    margin: 20px 0;
+    padding: 15px 0;
+  }
+
+  .modal-body {
+    padding: 2em 3em;
+  }
+}
+
 .message {
   border: 1px dashed;
   color: $near-black;
@@ -60,6 +72,10 @@ a {
 
 .modal {
   background: rgba(255, 255, 255, 0.5);
+
+  &-header {
+    border-color: $black;
+  }
 }
 
 .password-notifications {
