Enhance Create and Update forms
- The modal header's border color is now transparent.
- Each form has a subheading with a call to action.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -76,6 +76,13 @@ a {
   &-header {
     border-color: $black;
   }
+
+  &.create,
+  &.update {
+    .modal-header {
+      border-color: transparent;
+    }
+  }
 }
 
 .password-notifications {
