--- a/assets/scripts/templates/create.handlebars
+++ b/assets/scripts/templates/create.handlebars
@@ -1,9 +1,9 @@
 <form class="form create">
   <div class="form-group">
-    <input type="text" class="form-control input-sm to-do-content"  name="todo[content]">
+    <input type="text" class="form-control input-sm to-do-content"  name="todo[content]" placeholder="Type here" required>
   </div>
   <div class="form-group text-right">
-    <button class="btn btn-default btn-sm btn-custom" type="submit">Create</button>
+    <button class="text-strong btn btn-default btn-sm btn-custom" type="submit">Create</button>
   </div>
   <p class="hidden message"></p>
 </form>
