--- a/assets/scripts/templates/to-do.handlebars
+++ b/assets/scripts/templates/to-do.handlebars
@@ -3,7 +3,7 @@
     <input type="text" class="form-control input-sm to-do-content"  name="todo[content]" placeholder="{{todo.content}}">
   </div>
   <div class="form-group text-right">
-    <button class="btn btn-default btn-sm btn-custom" type="submit">Update</button>
+    <button class="text-strong btn btn-default btn-sm btn-custom" type="submit">Save</button>
   </div>
   <p class="hidden message"></p>
 </form>
