Add feedback message for users who have an empty to-do list
Includes a call to action.

--- a/assets/scripts/templates/to-do-list.handlebars
+++ b/assets/scripts/templates/to-do-list.handlebars
@@ -1,3 +1,7 @@
+{{#unless todos}}
+<p>Your list is empty. Create a to-do.</p>
+{{/unless}}
+
 <ul class="list-unstyled to-do-list" id="todoList">
   {{#each todos as |todo|}}
   <li class="to-do">
