--- a/assets/scripts/templates/password.handlebars
+++ b/assets/scripts/templates/password.handlebars
@@ -7,7 +7,7 @@
     <label for="inputPassword5" class="control-label text-uppercase text-mono text-strong">New Password</label>
     <input type="password" id="inputPassword5" class="form-control" name="passwords[new]" placeholder="Enter your new password" required>
   </div>
-  <div class="form-group">
+  <div class="form-group text-right">
     <button type="submit" class="text-strong btn btn-default btn-custom" id="passwordButton">Save</button>
   </div>
 </form>
