Disable checkbox on Learn More

--- a/assets/scripts/templates/learn.handlebars
+++ b/assets/scripts/templates/learn.handlebars
@@ -50,7 +50,8 @@
     </p>
   </article>
   <article class="learn-article">
-    <input type="checkbox" checked>
+    <input type="checkbox" disabled>
+    <input type="checkbox" checked disabled>
     <h5 class="text-uppercase text-mono text-strong">Update</h5>
     <p>
       Update your to-do by clicking on it, then type your changes and save them.
